fix overflow on login pages

--- a/front/react/src/login/login_style.css
+++ b/front/react/src/login/login_style.css
@@ -40,6 +40,7 @@
   z-index: 0;
   -webkit-clip-path: inset(0 0 0 0);
   clip-path: inset(0 0 0 0);
+  overflow: hidden;
 }
 
 .screen__background__shape {
